--- a/docs/adoc-curriculum.adoc
+++ b/docs/adoc-curriculum.adoc
@@ -46,31 +46,22 @@ include::00b-basics/00-basics.adoc[{include_configuration}]
 
 <<<
 :sectnums:
-include::01-Intro-and-Motivation/00-structure.adoc[{include_configuration}]
+include::01-intro/00-structure.adoc[{include_configuration}]
 
 <<<
-include::02-Clean-Start/00-structure.adoc[{include_configuration}]
+include::02-approaches/00-structure.adoc[{include_configuration}]
 
 <<<
-include::03-Functional-Requirements/00-structure.adoc[{include_configuration}]
+include::03-elements/00-structure.adoc[{include_configuration}]
 
 <<<
-include::04-Quality-Requirements/00-structure.adoc[{include_configuration}]
+include::04-tools/00-structure.adoc[{include_configuration}]
 
 <<<
-include::05-Behavior-Driven-Development/00-structure.adoc[{include_configuration}]
+include::05-evaluating/00-structure.adoc[{include_configuration}]
 
 <<<
-include::06-Prioritization/00-structure.adoc[{include_configuration}]
-
-<<<
-include::07-Cooperation-between-Roles/00-structure.adoc[{include_configuration}]
-
-<<<
-include::08-Tools/00-structure.adoc[{include_configuration}]
-
-<<<
-include::09-Example/00-structure.adoc[{include_configuration}]
+include::06-examples/00-structure.adoc[{include_configuration}]
 
 <<<
 include::42-glossary/00-glossary.adoc[{include_configuration}]
