--- a/docs/42-glossary/00-glossary.adoc
+++ b/docs/42-glossary/00-glossary.adoc
@@ -1,4 +1,3 @@
-// header file for Req4Arc Glossary
 // (c) iSAQB e.V. (https://isaqb.org)
 // ====================================================
 
@@ -11,7 +10,7 @@ include::../config/_feedback.adoc[]
 [NOTE]
 ====
 * GS, Oct. 2019: The glossary is currently maintained in EN (English) only.
-* For an example for cross-references within the glossary, see the "Gherkin".
+* For an example for cross-references within the glossary, see  "Gherkin".
 We don't currently use AsciiDoc cross-references, but stick to "->" symbols instead.
 ====
 // end::REMARK[]
@@ -25,22 +24,11 @@ We don't currently use AsciiDoc cross-references, but stick to "->" symbols inst
 
 [glossary]
 
+arc42:: An open-source _template_ for software architecture documentation. Available in numerous formats, extensively documented, many examples available. See https://arc42.org (overview and downloads) and https://docs.arc42.org (documentation and more than 130 tipps for effective usage)
+
 ASR:: _Architecturally Significant Requirements_ are those requirements that especially shape or influence architectural decisions.
 
-ATDD:: _Acceptance Test Driven Development_
-
-BDD:: _Behavior Driven Development_
-
 Gherkin:: Domain-specific language for writing ->BDD scenarios in ->GWT syntax.
-
-GWT:: _Given, When, Then_: Semi-structured way to write down test cases or behavior specifications.
-It was invented by Dan North as part of ->BDD (behavior-driven development).
-
-SMART:: A SMART goal helps with setting and specifying goals.
-SMART is an acronym, standing for _Specific, Measurable, Achievable, Realistic, and Timely._
-A SMART goal incorporates all of these criteria to help focus efforts, therefore increasing the chances of achieving that goal.
-
-TDD:: _Test Driven Development_
 
 
 // end::EN[]
