--- a/docs/01-intro/00-structure.adoc
+++ b/docs/01-intro/00-structure.adoc
@@ -8,7 +8,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LZ-1-01.adoc[{include_configuration}]
+include::LG-1-01.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -19,9 +19,9 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LZ-1-01.adoc[{include_configuration}]
+include::LG-1-01.adoc[{include_configuration}]
 // end::EN[]
 
 
 // references (if any!)
-include::references.adoc[{include_configuration}]
+//include::references.adoc[{include_configuration}]
