--- a/docs/02-approaches/00-structure.adoc
+++ b/docs/02-approaches/00-structure.adoc
@@ -10,7 +10,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 === {learning-goals}
 
 include::LG-2-01.adoc[{include_configuration}]
-include::LG-2-02.adoc[{include_configuration}]
+//include::LG-2-02.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -22,7 +22,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 === {learning-goals}
 
 include::LG-2-01.adoc[{include_configuration}]
-include::LG-2-02.adoc[{include_configuration}]
+//include::LG-2-02.adoc[{include_configuration}]
 // end::EN[]
 
 
