--- a/docs/02-approaches/LG-2-01.adoc
+++ b/docs/02-approaches/LG-2-01.adoc
@@ -5,24 +5,13 @@ include::../config/_feedback.adoc[]
 
 // tag::DE[]
 [[LZ-2-1]]
-==== LZ 2-1: Lorem ipsum dolor sit amet, consectetur adipiscing elit
+==== LZ 2-1: Architekturdokumentation erstellen können
 
-- Was sollen die Teilnehmer können?
-   * Fähigkeit 1
-   * Fähigkeit 2
-   * Fähigkeit 3
-   * etc.
-- Was sollen die Teilnehmer verstehen?
-  * Aussage 1
-  * Behauptung 2
-  * Erfahrung 3
-  * Zusammenhang 4
-  * etc.
-- Was sollen die Teilnehmer kennen?
-  * Zusammenhang Nr. 1
-  * Norm Nr. 2
-  * Buch Nr. 3
-  * etc.
+[[LZ-2-2]]
+==== LZ 2-2: Zielgruppen und Ziele der Architekturdokumentation ermitteln
+
+[[LZ-2-3]]
+==== LZ 2-3: Beispiele von Dokumentations-Templates kennen
 
 // end::DE[]
 
@@ -33,20 +22,20 @@ tbd.
 // end::EN[]
 
 // tag::REMARK[]
-Aus Version 1.5:
+Aus Version 1.5 (Verweise auf LZ nachträglich eingefügt):
 
 Teilnehmer können für gegebene Situation angemessene Vorgehensweise für die Dokumentation bestimmen/entwerfen.
 
 ==== 4.2.1 Was sollen die Teilnehmer können?
 
-* Architekturdokumentation für folgende Situationen erstellen: 
+* Architekturdokumentation für folgende Situationen erstellen (siehe <<LZ-2-1>>): 
 ** Erstellung neuer Systeme
 ** Weiterentwicklung bestehender Systeme mit vorhandener Dokumentation
 ** Nachdokumentation bestehender Systeme ohne vorhandene Dokumentation
 ** Dokumentation in Ausnahmesituationen (wenig Budget, wenig Zeit, wenig verfügbare Informationsquellen etc.)
-* Zielgruppen und Ziele der Dokumentation ermitteln
+* Zielgruppen und Ziele der Dokumentation ermitteln (siehe <<LZ-2-2>>)
 * Zu erstellende Bestandteile bedarfsgerecht auswählen
-* Die Vorteile fester Gliederungen und Strukturen für (technische) Dokumentation argumentieren können.
+* Die Vorteile fester Gliederungen und Strukturen für (technische) Dokumentation argumentieren können. (siehe <<LZ-2-3>>)
 
 ==== 4.2.2 Was sollen die Teilnehmer verstehen?
 * Dokumentation entsteht im Idealfall begleitend zu Architektur und Entwicklung, nicht hinterher.
