--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -3,26 +3,36 @@
 
 The international Software Architecture Qualification Board (link:https://isaqb.org[iSAQB]) defines curricula on several levels for software architects.
 
-The goal of this module is to equip architects with enough 
+The goal of this module is to equip architects and developers with solid methodical foundations to effectively and efficiently create and maintain adequate software architecture documentation.
 
 The terminology used in the iSAQB curricula can be found as a (freely available) ebook, published on https://leanpub.com/isaqbglossary/read[Leanpub].
 
 == Development versions
 
-The ADOC Curriculum is currently maintained and published in English (EN) only.
-Maintainers and volunteer reviewers collaborate on GitHub to improve the curriculum.
+The ADOC Curriculum is currently maintained and published in German (DE) only,
+an EN translation is under way.
+
+Maintainers and volunteer reviewers collaborate on GitHub to improve this curriculum.
+
+==== Status
+
+image:https://travis-ci.com/isaqb-org/curriculum-adoc.svg?branch=master["Build Status", link="https://travis-ci.com/isaqb-org/curriculum-adoc"]
+image:https://img.shields.io/github/last-commit/isaqb-org/curriculum-adoc/master.svg["Last commit"]
+image:https://img.shields.io/github/contributors/isaqb-org/curriculum-adoc.svg["Contributors",link="https://github.com/isaqb-org/curriculum-adoc/graphs/contributors"]
+image:https://img.shields.io/github/issues/isaqb-org/curriculum-adoc.svg["Issues",link="https://github.com/isaqb-org/curriculum-adoc/issues"]
+image:https://img.shields.io/github/issues-closed/isaqb-org/curriculum-adoc.svg["Issues closed",link="https://github.com/isaqb-org/curriculum-adoc/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aclosed+"]
 
 |===
-| Version | Comments | HTML | PDF
+| Version | HTML | PDF
 
 | English
-|
-| link:adoc-curriculum_en.html[HTML]
-| link:adoc-curriculum_en.pdf[PDF]
+| (currently not available) 
+// link:adoc-curriculum_en.html[HTML]
+| currently not available
+//link:adoc-curriculum_en.pdf[PDF]
 
-| English
-| ✔
-| link:adoc-curriculum_remarks_en.html[HTML]
-| link:adoc-curriculum_remarks_en.pdf[PDF]
+| German
+| link:adoc-curriculum_remarks_de.html[HTML]
+| link:adoc-curriculum_remarks_de.pdf[PDF]
 
 |===
