--- a/docs/00a-preamble/copyright.adoc
+++ b/docs/00a-preamble/copyright.adoc
@@ -1,16 +1,38 @@
-// tag::FEEDBACK[]
-:filename: 00-preamble/copyright.adoc
-include::../config/_feedback.adoc[]
-// end::FEEDBACK[]
 
 // tag::DE[]
+[.text-center]
+**(C) (Copyright), International Software Architecture Qualification Board e. V.
+(iSAQB^(R)^ e. V.) 2015-2020**
+
+Die Nutzung des Lehrplans ist nur unter den nachfolgenden Voraussetzungen erlaubt:
+
+1.	Sie möchten das Zertifikat zum CPSA Certified Professional for Software Architecture Advanced Level^(R)^ erwerben.
+Für den Erwerb des Zertifikats ist es gestattet, die Text-Dokumente und/oder Lehrpläne zu nutzen, indem eine Arbeitskopie für den eigenen Rechner erstellt wird. Soll eine darüber hinausgehende Nutzung der Dokumente und/oder Lehrpläne erfolgen, zum Beispiel zur Weiterverbreitung an Dritte, Werbung etc., bitte unter info@isaqb.org nachfragen.
+Es müsste dann ein eigener Lizenzvertrag geschlossen werden.
+2.	Sind Sie Trainer oder Trainingsprovider, ist die Nutzung der Dokumente und/oder Lehrpläne nach Erwerb einer Nutzungslizenz möglich. Hierzu bitte unter info@isaqb.org nachfragen.
+Lizenzverträge, die alles umfassend regeln, sind vorhanden.
+3.	Falls Sie weder unter die Kategorie 1. noch unter die Kategorie 2. fallen, aber dennoch die Dokumente und/oder Lehrpläne nutzen möchten, nehmen Sie bitte ebenfalls Kontakt unter info@isaqb.org zum iSAQB e. V. auf.
+Sie werden dort über die Möglichkeit des Erwerbs entsprechender Lizenzen im Rahmen der vorhandenen Lizenzverträge informiert und können die gewünschten Nutzungsgenehmigungen erhalten.
+
+.Wichtiger Hinweis
+****
+*Grundsätzlich weisen wir darauf hin, dass dieser Lehrplan urheberrechtlich geschützt ist.
+Alle Rechte an diesen Copyrights stehen ausschließlich dem International Software Architecture Qualification Board e. V. (iSAQB^(R)^ e. V.) zu.*
+****
+
+[.text-center]
+Das Kürzel "e. V." ist Teil des offiziellen Namens des iSAQB und steht für "eingetragener Verein",
+der seinen Status als juristische Person nach deutschem Recht beschreibt.
+Der Einfachheit halber wird der iSAQB e. V. im Folgenden ohne die Verwendung dieser Abkürzung als iSAQB bezeichnet.
 
 // end::DE[]
+
+// tag::EN[] 
 
 // tag::EN[]
 [.text-center]
 *(C) (Copyright), International Software Architecture Qualification Board e. V.
-(iSAQB^(R)^ e. V.) 2019*
+(iSAQB^(R)^ e. V.) 2015-2020*
 
 The curriculum may only be used subject to the following conditions:
 
@@ -24,6 +46,8 @@ The International Software Architecture Qualification Board e. V. (iSAQB^(R)^ e.
 [.text-center]
 The abbreviation "e. V." is part of the iSAQB's official name and stands for "eingetragener Verein" (registered association), which describes its status as a legal entity according to German law.
 For the purpose of simplicity, iSAQB e. V. shall hereafter be referred to as iSAQB without the use of said abbreviation.
+
+// end::EN[]
 
 // end::EN[]
 
