--- a/docs/05-evaluating/02-learning-goals.adoc
+++ b/docs/05-evaluating/02-learning-goals.adoc
@@ -1,13 +1,14 @@
+=== {learning-goals}
 
 // tag::DE[]
-[[LZ-3-1]]
-==== LZ 3-1: Dies ist das erste Lernziel in Kapitel 3, das mit xyz
-
+[[LZ-1-1]]
+==== LZ 1-1: Dies ist das erste Lernziel, in Kategorie xy
 - Was sollen die Teilnehmer können?
    * Fähigkeit 1
    * Fähigkeit 2
    * Fähigkeit 3
    * etc.
+
 - Was sollen die Teilnehmer verstehen?
   * Aussage 1
   * Behauptung 2
@@ -23,8 +24,8 @@
 // end::DE[]
 
 // tag::EN[]
-[[LG-3-1]]
-==== LG 3-1: TBD
+[[LG-1-1]]
+==== LG 1-1: The is the first learning goal, in category xy
 tbd.
 // end::EN[]
 
