--- a/docs/config/setup.adoc
+++ b/docs/config/setup.adoc
@@ -18,7 +18,7 @@ endif::withRemarks[]
 :language: EN
 
 // ":include_configuration:" always consists of the language, optionally
-// followed by ";REMARK" or ";FEEDBACK".
+// followed by ";REMARK"
 // additional markers might be configured here!
 :include_configuration: tags=**;{language}{remarks};!*
 
