Add professional English translation

--- a/docs/00a-preamble/01-what-to-expect-of-an-advanced-level-module.adoc
+++ b/docs/00a-preamble/01-what-to-expect-of-an-advanced-level-module.adoc
@@ -9,11 +9,10 @@ Die Bewertung und mündliche Prüfung wird durch vom iSAQB benannte Experten vor
 // end::DE[]
 
 // tag::EN[]
-=== What does an Advanced Level Module convey?
-
-The iSAQB Advanced Level offers modular training in three competence areas with flexible pathways through the program.
-It acknowledges and supports individual strengths and focus points.
-
-The certification is based on a homework paper.
-Grading and oral examination will be carried out by experts designated by iSAQB.
+=== What is taught in an Advanced Level module?
+- The iSAQB Advanced Level offers modular training in three areas of competence with flexibly designable training paths. It takes individual inclinations and priorities into account.
+- The certification is done as an assignment. The assessment and oral exam is conducted by experts appointed by the iSAQB.
 // end::EN[]
+
+// tag::REMARK[]
+// end::REMARK[]
