--- a/docs/00b-basics/01-what-to-expect-of-this-module.adoc
+++ b/docs/00b-basics/01-what-to-expect-of-this-module.adoc
@@ -1,5 +1,3 @@
-
-
 // tag::DE[]
 === Was vermittelt das Modul „{curriculum-short}“?
 
@@ -8,7 +6,7 @@ Am Ende des Moduls kennen die Teilnehmerinnen und Teilnehmer … und können …
 // end::DE[]
 
 // tag::EN[]
-=== Was does the module “{curriculum-short}” convey?
+=== What does the module “{curriculum-short}” convey?
 
 The module presents {curriculum-short} to the participants …
 At the end of the module, the participants know … and are able to …
