--- a/docs/00a-preamble/01-what-to-expect-of-an-advanced-level-module.adoc
+++ b/docs/00a-preamble/01-what-to-expect-of-an-advanced-level-module.adoc
@@ -1,11 +1,8 @@
 
 // tag::DE[]
 === Was vermittelt ein Advanced Level Modul?
-Der iSAQB Advanced Level bietet eine modulare Ausbildung in drei Kompetenzbereichen mit flexibel gestaltbaren Ausbildungswegen.
-Er berücksichtigt individuelle Neigungen und Schwerpunkte.
-
-Die Zertifizierung erfolgt als Hausarbeit.
-Die Bewertung und mündliche Prüfung wird durch vom iSAQB benannte Experten vorgenommen.
+- Der iSAQB Advanced Level bietet eine modulare Ausbildung in drei Kompetenzbereichen mit flexibel gestaltbaren Ausbildungswegen. Er berücksichtigt individuelle Neigungen und Schwerpunkte.
+- Die Zertifizierung erfolgt als Hausarbeit. Die Bewertung und mündliche Prüfung wird durch vom iSAQB benannte Experten vorgenommen.
 // end::DE[]
 
 // tag::EN[]
