--- a/docs/00b-basics/02-curriculum-structure-and-chronological-breakdown.adoc
+++ b/docs/00b-basics/02-curriculum-structure-and-chronological-breakdown.adoc
@@ -1,5 +1,25 @@
 
 // tag::DE[]
+=== Struktur des Lehrplans und empfohlene zeitliche Aufteilung
+
+[cols="<,>", options="header"]
+|===
+| Inhalt | Empfohlene Mindestdauer (min)
+| 1. Thema mit Einleitung | 180
+| 2. Thema über xz | 150
+| 3. Thema mit viel Theorie | 120
+| 4. Thema mit xy und Beispiel | 180
+| 5. Thema mit abc und d | 210
+| 6. Thema mit Abschlussbeispiel | 120
+| |
+| Summe | 960 (16h)
+
+|===
+
+[.text-center]
+.Zeitliche Aufteilung der Themengebiete
+image:01-basics/zeitaufteilung.png[pdfwidth=75%, role="text-center"]
+
 // end::DE[]
 
 // tag::EN[]
@@ -67,6 +87,12 @@ image:01-basics/chronological_breakdown.png[pdfwidth=75%, role="text-center"]
 // tag::REMARK[]
 [NOTE]
 ====
+Bitte sowohl die oben angegebene Tabelle als auch das beiliegende Excel-Dokument entsprechend anpassen
+und das Pie-Chart als "zeitaufteilung.png" nach `../images/01-basics` exportieren
 
+= = =
+
+Please adjust the table above as well as the excel document according to your curriculum and export the pie chart
+as "chronological_breakdown.png" to `../images/01-basics`.
 ====
 // end::REMARK[]
