--- a/docs/02-approaches/00-structure.adoc
+++ b/docs/02-approaches/00-structure.adoc
@@ -13,9 +13,7 @@
 
 include::01-duration-terms.adoc[{include_configuration}]
 
-
-include::LG-2-01.adoc[{include_configuration}]
-//include::LG-2-02.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 // references (if any!)
 include::references.adoc[{include_configuration}]
