--- a/docs/02-approaches/02-learning-goals.adoc
+++ b/docs/02-approaches/02-learning-goals.adoc
@@ -1,37 +1,45 @@
 === {learning-goals}
 
 // tag::DE[]
-[[LZ-1-1]]
-==== LZ 1-1: Dies ist das erste Lernziel, in Kategorie xy
-- Was sollen die Teilnehmer können?
-   * Fähigkeit 1
-   * Fähigkeit 2
-   * Fähigkeit 3
-   * etc.
+[[LZ-2-1]]
+==== LZ 2-1: Architekturdokumentation erstellen können
 
-- Was sollen die Teilnehmer verstehen?
-  * Aussage 1
-  * Behauptung 2
-  * Erfahrung 3
-  * Zusammenhang 4
-  * etc.
-- Was sollen die Teilnehmer kennen?
-  * Zusammenhang Nr. 1
-  * Norm Nr. 2
-  * Buch Nr. 3
-  * etc.
+[[LZ-2-2]]
+==== LZ 2-2: Zielgruppen und Ziele der Architekturdokumentation ermitteln
+
+[[LZ-2-3]]
+==== LZ 2-3: Beispiele von Dokumentations-Templates kennen
 
 // end::DE[]
 
 // tag::EN[]
-[[LG-1-1]]
-==== LG 1-1: The is the first learning goal, in category xy
+[[LG-2-1]]
+==== LG 2-1: TBD
 tbd.
 // end::EN[]
 
 // tag::REMARK[]
-[NOTE]
-====
-Die einzelnen Lernziele müssen nicht als einfache Aufzählungen mit Unterpunkten aufgeführt werden, sondern können auch gerne in ganzen Sätzen formuliert werden, welche die einzelnen Punkte (sofern möglich) integrieren.
-====
+Aus Version 1.5 (Verweise auf LZ nachträglich eingefügt):
+
+Teilnehmer können für gegebene Situation angemessene Vorgehensweise für die Dokumentation bestimmen/entwerfen.
+
+==== 4.2.1 Was sollen die Teilnehmer können?
+
+* Architekturdokumentation für folgende Situationen erstellen (siehe <<LZ-2-1>>):
+** Erstellung neuer Systeme
+** Weiterentwicklung bestehender Systeme mit vorhandener Dokumentation
+** Nachdokumentation bestehender Systeme ohne vorhandene Dokumentation
+** Dokumentation in Ausnahmesituationen (wenig Budget, wenig Zeit, wenig verfügbare Informationsquellen etc.)
+* Zielgruppen und Ziele der Dokumentation ermitteln (siehe <<LZ-2-2>>)
+* Zu erstellende Bestandteile bedarfsgerecht auswählen
+* Die Vorteile fester Gliederungen und Strukturen für (technische) Dokumentation argumentieren können. (siehe <<LZ-2-3>>)
+
+==== 4.2.2 Was sollen die Teilnehmer verstehen?
+* Dokumentation entsteht im Idealfall begleitend zu Architektur und Entwicklung, nicht hinterher.
+* Agilität und Dokumentation stehen nicht im Widerspruch zueinander.
+
+==== 4.2.3 Was sollen die Teilnehmer kennen?
+* Die Rolle von Architekturdokumentation in verschiedenen konkreten Vorgehensmodellen
+* Verschiedene Vorschläge und Vorlagen für Standardgliederungen (z. B. arc42, SEI).
 // end::REMARK[]
+
