--- a/docs/03-elements/00-structure.adoc
+++ b/docs/03-elements/00-structure.adoc
@@ -13,8 +13,7 @@
 
 include::01-duration-terms.adoc[{include_configuration}]
 
-include::LZ-3-01.adoc[{include_configuration}]
-include::LZ-3-02.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 
 // references (if any!)
