simplified file structure, updated build file, fixed build warnings, included list of LGs

--- a/docs/00a-preamble/00-introduction.adoc
+++ b/docs/00a-preamble/00-introduction.adoc
@@ -1,12 +1,20 @@
 // tag::DE[]
-// end::DE[]
-
-// tag::EN[]
-== Introduction: General information about the iSAQB Advanced Level
-// end::EN[]
+== Einführung: Allgemeine Informationen zum iSAQB Advanced Level
 
 include::01-what-to-expect-of-an-advanced-level-module.adoc[{include_configuration}]
 
 include::02-advanced-level-knowledge.adoc[{include_configuration}]
 
 include::03-prerequisites.adoc[{include_configuration}]
+// end::DE[]
+
+// tag::EN[]
+== Introduction: General information about the iSAQB Advanced Level
+
+include::01-what-to-expect-of-an-advanced-level-module.adoc[{include_configuration}]
+
+include::02-advanced-level-knowledge.adoc[{include_configuration}]
+
+include::03-prerequisites.adoc[{include_configuration}]
+// end::EN[]
+
