--- a/docs/04-tools/00-structure.adoc
+++ b/docs/04-tools/00-structure.adoc
@@ -10,7 +10,8 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-04-1.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 // end::DE[]
 
 // tag::EN[]
@@ -21,6 +22,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-04-1.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 
 // end::EN[]
