--- a/docs/06-examples/00-structure.adoc
+++ b/docs/06-examples/00-structure.adoc
@@ -10,7 +10,8 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-06-1.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 
 // end::DE[]
 
@@ -22,6 +23,7 @@ include::01-examples-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-06-1.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 
 // end::EN[]
