--- a/docs/01-fundamentals/00-structure.adoc
+++ b/docs/01-fundamentals/00-structure.adoc
@@ -8,7 +8,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-1-01.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -19,7 +19,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LG-1-01.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
 // end::EN[]
 
 
