--- a/docs/03-elements/00-structure.adoc
+++ b/docs/03-elements/00-structure.adoc
@@ -9,8 +9,8 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LZ-3-01.adoc[{include_configuration}]
-include::LZ-3-02.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 // end::DE[]
 
 // tag::EN[]
@@ -20,10 +20,10 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::LZ-3-01.adoc[{include_configuration}]
-include::LZ-3-02.adoc[{include_configuration}]
+include::learning-goals.adoc[{include_configuration}]
+
 // end::EN[]
 
 
 // references (if any!)
-include::references.adoc[{include_configuration}]
+// include::references.adoc[{include_configuration}]
