--- a/docs/adoc-curriculum.adoc
+++ b/docs/adoc-curriculum.adoc
@@ -37,6 +37,10 @@ include::00a-preamble/copyright.adoc[{include_configuration}]
 toc::[]
 
 <<<
+// Auto-generated list of learning objectives
+include::learning-objectives.adoc[{include_configuration}]
+
+<<<
 :sectnums!:
 include::00a-preamble/00-introduction.adoc[{include_configuration}]
 
@@ -46,7 +50,7 @@ include::00b-basics/00-basics.adoc[{include_configuration}]
 
 <<<
 :sectnums:
-include::01-intro/00-structure.adoc[{include_configuration}]
+include::01-fundamentals/00-structure.adoc[{include_configuration}]
 
 <<<
 include::02-approaches/00-structure.adoc[{include_configuration}]
