--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -12,9 +12,8 @@ an EN translation is under way.
 
 Maintainers and volunteer reviewers collaborate on GitHub to improve this curriculum.
 
-==== Status
+=== Status
 
-image:https://travis-ci.com/isaqb-org/curriculum-adoc.svg?branch=master["Build Status", link="https://travis-ci.com/isaqb-org/curriculum-adoc"]
 image:https://img.shields.io/github/last-commit/isaqb-org/curriculum-adoc/master.svg["Last commit"]
 image:https://img.shields.io/github/contributors/isaqb-org/curriculum-adoc.svg["Contributors",link="https://github.com/isaqb-org/curriculum-adoc/graphs/contributors"]
 image:https://img.shields.io/github/issues/isaqb-org/curriculum-adoc.svg["Issues",link="https://github.com/isaqb-org/curriculum-adoc/issues"]
