--- a/docs/00b-basics/00-basics.adoc
+++ b/docs/00b-basics/00-basics.adoc
@@ -2,6 +2,7 @@
 // (c) iSAQB e.V. (https://isaqb.org)
 // ====================================================
 
+// tag::DE[]
 == {basics}
 
 include::01-what-to-expect-of-this-module.adoc[{include_configuration}]
@@ -15,3 +16,23 @@ include::04-prerequisites-for-this-training.adoc[{include_configuration}]
 include::05-curriculum-outline.adoc[{include_configuration}]
 
 include::06-complementary-information.adoc[{include_configuration}]
+
+// end::DE[]
+
+// tag::EN[]
+
+== {basics}
+
+include::01-what-to-expect-of-this-module.adoc[{include_configuration}]
+
+include::02-curriculum-structure-and-chronological-breakdown.adoc[{include_configuration}]
+
+include::03-timing-didactics-and-more.adoc[{include_configuration}]
+
+include::04-prerequisites-for-this-training.adoc[{include_configuration}]
+
+include::05-curriculum-outline.adoc[{include_configuration}]
+
+include::06-complementary-information.adoc[{include_configuration}]
+
+// end::EN[]
