--- a/docs/01-fundamentals/00-structure.adoc
+++ b/docs/01-fundamentals/00-structure.adoc
@@ -8,7 +8,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -19,6 +19,6 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 // end::EN[]
 
