--- a/docs/03-elements/00-structure.adoc
+++ b/docs/03-elements/00-structure.adoc
@@ -3,13 +3,14 @@
 
 
 // tag::DE[]
+[[Bestandteile]]
 == Bestandteile von Architekturdokumentationen
 
 include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -20,7 +21,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 // end::EN[]
 
