--- a/docs/04-tools/00-structure.adoc
+++ b/docs/04-tools/00-structure.adoc
@@ -10,7 +10,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 // end::DE[]
 
@@ -22,7 +22,7 @@ include::01-duration-terms.adoc[{include_configuration}]
 
 === {learning-goals}
 
-include::learning-goals.adoc[{include_configuration}]
+include::02-learning-goals.adoc[{include_configuration}]
 
 
 // end::EN[]
