--- a/docs/00b-basics/01-what-to-expect-of-this-module.adoc
+++ b/docs/00b-basics/01-what-to-expect-of-this-module.adoc
@@ -1,8 +1,15 @@
 // tag::DE[]
 === Was vermittelt das Modul „{curriculum-short}“?
 
-Das Modul präsentiert den Teilnehmerinnen und Teilnehmern {curriculum-name} als …
-Am Ende des Moduls kennen die Teilnehmerinnen und Teilnehmer … und können …
+ADOC vermittelt die Fähigkeiten:
+
+* die Dokumentation von Softwarearchitekturen selbständig zu konzipieren und zu erstellen 
+* bestehende Dokumentation bezüglich ihrer Eignung und Angemessenheit zu bewerten 
+* bestehende Dokumentation zu verbessern.
+
+Teilnehmende lernen, die wesentlichen Aspekte von Softwarearchitekturen (u.a. Entscheidungen, Strukturen, Konzepte, Qualitätsanforderungen und Sichten) systematisch zu beschreiben.
+Dazu stellt ADOC grundlegende Beschreibungs- und Notationsmittel sowie mögliche Werkzeuge zur praktischen Umsetzung vor.
+
 // end::DE[]
 
 // tag::EN[]
