--- a/docs/01-fundamentals/02-learning-goals.adoc
+++ b/docs/01-fundamentals/02-learning-goals.adoc
@@ -1,4 +1,4 @@
-=== {learning-goals}
+
 
 // tag::DE[]
 [[LZ-1-1]]
@@ -12,7 +12,7 @@
    ** Konservierung von Wissen über Entwicklung und Architektur
 * Diese Ziele und den Nutzen gegenüber Stakeholdern überzeugend vertreten können.
 
-
+[[LZ-1-2]]
 ==== LZ 1-2: Bedeutung von Architekturdokumentation für unterschiedliche Stakeholder verstehen
 
 * Verstehen, dass unterschiedliche Stakeholder i.d.R. verschiedene Anforderungen an Architekturdokumentation haben, beispielsweise hinsichtlich:
@@ -22,7 +22,8 @@
 ** technische Repräsentation (mit/ohne Schreib-/Änderungsmöglichkeiten, PDF, HTML, Wiki, Textverarbeitung oä)
 ** Grad der Aktualität
 
-==== LG 1-3: Architekturdokumentation gegen andere Arten von Dokumentation abgrenzen
+[[LZ-1-3]]
+==== LZ 1-3: Architekturdokumentation gegen andere Arten von Dokumentation abgrenzen
 
 * Verstehen, dass Architekturdokumentation Berührungspunkte und teilweise Überdeckung zu anderen Arten vo Dokumentation besitzt, beispielsweise:
 ** Anforderungs-/Requirements-Dokumentation
@@ -31,7 +32,8 @@
 ** Testdokumentation
 ** Betriebsdokumentation
 
-==== LG 1-4: Typische Notations- und Darstellungsmittel für Architekturdokumentation kennen
+[[LZ-1-4]]
+==== LZ 1-4: Typische Notations- und Darstellungsmittel für Architekturdokumentation kennen
 
 * Verschiedene Notations- und Darstellungsmittel für Architekturinformationen kennen, beispielsweise:
 ** Modellierungsmethoden, beispielsweise UML, BPMN, ER-Diagramme, Ereignis-Prozessketten (ePK)
@@ -39,7 +41,8 @@
 
 * UML ist für Architekturdokumentation hilfreich, aber nicht zwingend erforderlich.
 
-==== LG 1-5: Varianten von Entwicklungsvorgehen und deren "Beitrag" zu Architekturdokumentation kennen
+[[LZ-1-5]]
+==== LZ 1-5: Varianten von Entwicklungsvorgehen und deren "Beitrag" zu Architekturdokumentation kennen
 
 * In eher formalen Entwicklungsvorhaben (etwa _safety-critical_) gelten eher hohe Ansprüche an Architekturdokumentation
 * In eher leichtwichtigen Entwicklungsprozessen (agilen Prozessen) sollten Teams eine dem System und dessen Umfeld angemessene Art von Dokumentation wählen
