--- a/docs/05-evaluating/02-learning-goals.adoc
+++ b/docs/05-evaluating/02-learning-goals.adoc
@@ -1,37 +1,53 @@
-=== {learning-goals}
 
 // tag::DE[]
-[[LZ-1-1]]
-==== LZ 1-1: Dies ist das erste Lernziel, in Kategorie xy
-- Was sollen die Teilnehmer können?
-   * Fähigkeit 1
-   * Fähigkeit 2
-   * Fähigkeit 3
-   * etc.
+[[LZ-5-1]]
+==== LZ 5-1: Notwendigkeit der Überprüfung auf Gebrauchstauglichkeit erkennen
 
-- Was sollen die Teilnehmer verstehen?
-  * Aussage 1
-  * Behauptung 2
-  * Erfahrung 3
-  * Zusammenhang 4
-  * etc.
-- Was sollen die Teilnehmer kennen?
-  * Zusammenhang Nr. 1
-  * Norm Nr. 2
-  * Buch Nr. 3
-  * etc.
+Softwarearchitekt:innen erkennen die Überprüfung  auf Gebrauchstauglichkeit als einen wesentlichen Erfolgsfaktor der Dokumentation.
+
+[[LZ-5-2]]
+==== LZ 5-2: Verschiedene Arten der Begutachtung differenzieren
+
+Softwarearchitekt:innen können wischen inhaltlicher und formaler Begutachtung einer Architekturdokumentation differenzieren.
+
+
+[[LZ-5-3]]
+==== LZ 5-3: Review von Architektur und Dokumentation differenzieren
+
+Softwarearchitekt:innen können Review/Begutachtung einer Dokumentation von der Bewertung der Architektur oder des Systems abgrenzen.
+
+
+[[LZ-5-4]]
+==== LZ 5-4:  Ziele von Dokumentations-Reviews ermitteln und erklären
+
+Softwarearchitekt:innen können mit den betroffenen Personen ("Stakeholdern") mögliche Ziele von Dokumentations-Reviews ermitteln und diese Ziele anderen Personen erklären.
+
+[[LZ-5-5]]
+==== LZ 5-5: Checklisten und Fragenkataloge für Reviews erstellen
+
+Softwarearchitekt:innen können Checklisten und Fragenkataloge für Reviews erstellen.
+
+[[LZ-5-6]]
+==== LZ 5-6: Verschiedene Rollen bei Dokumentations-Reviews ausüben können
+
+Softwarearchitekt:innen können im Rahmen von Dokumentations-Reviews in der Rolle von:
+
+* Autor:innen mit Einwänden angemessen umgehen
+* Gutachter:innen konstruktive Rückmeldungen an Autor:innen geben 
+* Moderator:innen ein fachliches Review leiten
+
+[[LZ-5-7]]
+==== LZ 5-7: Auf Basis von Review-Ergebnissen die Qualität von Dokumentation verbessern
+
+Softwarearchitekt:innen können auf Basis ermittelter Review-Ergebnisse vorhandene Architekturdokumentation weiterentwickeln und pflegen, und dabei die Qualität dieser Dokumentation systematisch verbessern.
 
 // end::DE[]
 
 // tag::EN[]
-[[LG-1-1]]
-==== LG 1-1: The is the first learning goal, in category xy
+[[LG-5-1]]
+==== LG 5-1: The is the first learning goal, in category xy
 tbd.
 // end::EN[]
 
 // tag::REMARK[]
-[NOTE]
-====
-Die einzelnen Lernziele müssen nicht als einfache Aufzählungen mit Unterpunkten aufgeführt werden, sondern können auch gerne in ganzen Sätzen formuliert werden, welche die einzelnen Punkte (sofern möglich) integrieren.
-====
 // end::REMARK[]
